--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/dashboard.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/dashboard.html
@@ -27,13 +27,13 @@
             {% for appointment in confirmed %}
 
         <tr>
-            <td> <a href="#" >{{appointment.id}}</a></td>
-            <td> <a href="#" >{{appointment.patient_username}}</a></td>
-            <td> <a href="#" >{{appointment.time}}</a></td>
-            <td> <a href="#" >{{appointment.date}}</a></td>
-            <td> <a href="#" >{{appointment.doctor}}</a></td>
-            <td> <a href="#" >{{appointment.visit}}</a></td>
-            <td> <a href="#" >{{appointment.location}}</a></td>
+            <td> <a>{{appointment.id}}</a></td>
+            <td> <a>{{appointment.patient_username}}</a></td>
+            <td> <a>{{appointment.time}}</a></td>
+            <td> <a>{{appointment.date}}</a></td>
+            <td> <a>{{appointment.doctor}}</a></td>
+            <td> <a>{{appointment.visit}}</a></td>
+            <td> <a>{{appointment.location}}</a></td>
             <td> <a href="#" >{{appointment.stat}}</a></td>
         </tr>
 
@@ -59,13 +59,13 @@
             {% for appointment in unconfirmed %}
 
         <tr>
-            <td> <a href="#" >{{appointment.id}}</a></td>
-            <td> <a href="#" >{{appointment.patient_username}}</a></td>
-            <td> <a href="#" >{{appointment.time}}</a></td>
-            <td> <a href="#" >{{appointment.date}}</a></td>
-            <td> <a href="#" >{{appointment.doctor}}</a></td>
-            <td> <a href="#" >{{appointment.visit}}</a></td>
-            <td> <a href="#" >{{appointment.location}}</a></td>
+            <td> <a>{{appointment.id}}</a></td>
+            <td> <a>{{appointment.patient_username}}</a></td>
+            <td> <a>{{appointment.time}}</a></td>
+            <td> <a>{{appointment.date}}</a></td>
+            <td> <a>{{appointment.doctor}}</a></td>
+            <td> <a>{{appointment.visit}}</a></td>
+            <td> <a>{{appointment.location}}</a></td>
             <td> <a href="#" >{{appointment.stat}}</a></td>
         </tr>
 
@@ -92,13 +92,13 @@
             {% for appointment in postponed %}
 
         <tr>
-            <td> <a href="#" >{{appointment.id}}</a></td>
-            <td> <a href="#" >{{appointment.patient_username}}</a></td>
-            <td> <a href="#" >{{appointment.time}}</a></td>
-            <td> <a href="#" >{{appointment.date}}</a></td>
-            <td> <a href="#" >{{appointment.doctor}}</a></td>
-            <td> <a href="#" >{{appointment.visit}}</a></td>
-            <td> <a href="#" >{{appointment.location}}</a></td>
+            <td> <a>{{appointment.id}}</a></td>
+            <td> <a>{{appointment.patient_username}}</a></td>
+            <td> <a>{{appointment.time}}</a></td>
+            <td> <a>{{appointment.date}}</a></td>
+            <td> <a>{{appointment.doctor}}</a></td>
+            <td> <a>{{appointment.visit}}</a></td>
+            <td> <a>{{appointment.location}}</a></td>
             <td> <a href="#" >{{appointment.stat}}</a></td>
         </tr>
 
