--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/dashboard.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/dashboard.html
@@ -9,7 +9,7 @@
             <h1>No Appointment for Today!</h1>
         </div>
     {% else %}
-        <h1>Confirmed Appointments</h1>
+        <h1>Appointments</h1>
         <table class="table table-striped table-hover">
         <thead>
             <tr>
@@ -24,72 +24,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for appointment in confirmed %}
-
-        <tr>
-            <td> <a>{{appointment.id}}</a></td>
-            <td> <a>{{appointment.patient_username}}</a></td>
-            <td> <a>{{appointment.time}}</a></td>
-            <td> <a>{{appointment.date}}</a></td>
-            <td> <a>{{appointment.doctor}}</a></td>
-            <td> <a>{{appointment.visit}}</a></td>
-            <td> <a>{{appointment.location}}</a></td>
-            <td> <a href="#" >{{appointment.stat}}</a></td>
-        </tr>
-
-        {% endfor %}
-        </tbody>
-        </table>
-        <br><br><br>
-        <h1>Unconfirmed Appointments</h1>
-        <table class="table table-striped table-hover">
-        <thead>
-            <tr>
-                <th scope="col">Appointment No#</th>
-                <th scope="col">Patient username</th>
-                <th scope="col">Time of Appointment</th>
-                <th scope="col">Date of Appointment</th>
-                <th scope="col">Doctor Assigned</th>
-                <th scope="col">Type of Visit</th>
-                <th scope="col">Location</th>
-                <th scope="col">Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for appointment in unconfirmed %}
-
-        <tr>
-            <td> <a>{{appointment.id}}</a></td>
-            <td> <a>{{appointment.patient_username}}</a></td>
-            <td> <a>{{appointment.time}}</a></td>
-            <td> <a>{{appointment.date}}</a></td>
-            <td> <a>{{appointment.doctor}}</a></td>
-            <td> <a>{{appointment.visit}}</a></td>
-            <td> <a>{{appointment.location}}</a></td>
-            <td> <a href="#" >{{appointment.stat}}</a></td>
-        </tr>
-
-        {% endfor %}
-        </tbody>
-        </table>
-
-        <br><br><br>
-        <h1>Postponed Appointments</h1>
-        <table class="table table-striped table-hover">
-        <thead>
-            <tr>
-                <th scope="col">Appointment No#</th>
-                <th scope="col">Patient username</th>
-                <th scope="col">Time of Appointment</th>
-                <th scope="col">Date of Appointment</th>
-                <th scope="col">Doctor Assigned</th>
-                <th scope="col">Type of Visit</th>
-                <th scope="col">Location</th>
-                <th scope="col">Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for appointment in postponed %}
+            {% for appointment in appointments %}
 
         <tr>
             <td> <a>{{appointment.id}}</a></td>
