--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/appointment.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/appointment.html
@@ -3,38 +3,89 @@
 
     {% include 'vaccinerecordapp/patient-navbar.html' %}
 
-<!-- Set Appointment -->
-<div class="card" style="margin-left: 10%; margin-right: 10%">
-<h5 class="card-header">Set Appointment</h5>
-<div class="card-body">
-  <form action="{% url 'appointment' %}" method="post">
-    {% csrf_token %}
-    <div class="modal-body" style="color: black">
-            <div class="row" style="margin-left: 15%; margin-right: 15%">
-            <div class="col">Enter Patient Username (Refer to patient record "Username"): {{form.patient_username}}</div>
-            </div>
-            <br />
-            <br />
-            <div class="row" style="width: 50%; margin-left: 15%; margin-right: 15%">
-            <div class="col">Requested Appointment Date: {{form.date}}</div>
-            </div>
-            <br />
-            <br />
-            <div class="row" style="margin-left: 15%; margin-right: 15%">
-            <div class="col">Select Doctor (Refer to patient record "Attending Doctor"): {{form.doctor}}</div>
-            <div class="col">Select Location: {{form.location}}</div>
-            <div class="col">Select Time: {{form.time}}</div>
-            <div class="col">Reason for Visit: {{form.visit}}</div>
-            {% if request.user|has_group:"staff" %}
-                <div class="col">Status: {{form.stat}}</div>
-            {% endif %}
-        </div>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button id="submit_button" type="submit" class="btn btn-primary">Set Appointment</button>
-    </div>
-</form>
+<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <button
+    class="btn btn-sm btn-outline-dark"
+    data-bs-toggle="modal"
+    data-bs-target="#appointment"
+    style="color: black">
+    <i class="fas fa-folder-plus fa-lg"></i> 
+    Set Appointment </button>
 </div>
 
+{% if count == 0 %}
+        <div id = "noAppointment">
+            <span><i class ="fas fa-calendar-check fa-3x"></i></span>
+            <h1>No Appointment for Today!</h1>
+        </div>
+    {% else %}
+        <h1>Appointments</h1>
+        <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Appointment No#</th>
+                <th scope="col">Patient username</th>
+                <th scope="col">Time of Appointment</th>
+                <th scope="col">Date of Appointment</th>
+                <th scope="col">Doctor Assigned</th>
+                <th scope="col">Type of Visit</th>
+                <th scope="col">Location</th>
+                <th scope="col">Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for appointment in appointments %}
+
+        <tr>
+            <td> <a>{{appointment.id}}</a></td>
+            <td> <a>{{appointment.patient_username}}</a></td>
+            <td> <a>{{appointment.time}}</a></td>
+            <td> <a>{{appointment.date}}</a></td>
+            <td> <a>{{appointment.doctor}}</a></td>
+            <td> <a>{{appointment.visit}}</a></td>
+            <td> <a>{{appointment.location}}</a></td>
+            <td> <a href="#" >{{appointment.stat}}</a></td>
+        </tr>
+
+        {% endfor %}
+        </tbody>
+        </table>
+    {% endif %}
+<!-- Set Appointment -->
+<div class="modal fade" id="appointment">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <form action="{% url 'appointment' %}" method="post">
+            <div class="modal-body" style="color: black">
+                {% csrf_token %}
+                <div class="modal-body" style="color: black">
+                        <div class="row" style="margin-left: 15%; margin-right: 15%">
+                        <div class="col">Enter Patient Username (Refer to patient record "Username"): {{form.patient_username}}</div>
+                        </div>
+                        <br />
+                        <br />
+                        <div class="row" style="width: 50%; margin-left: 15%; margin-right: 15%">
+                        <div class="col">Requested Appointment Date: {{form.date}}</div>
+                        </div>
+                        <br />
+                        <br />
+                        <div class="row" style="margin-left: 15%; margin-right: 15%">
+                        <div class="col">Select Doctor (Refer to patient record "Attending Doctor"): {{form.doctor}}</div>
+                        <div class="col">Select Location: {{form.location}}</div>
+                        <div class="col">Select Time: {{form.time}}</div>
+                        <div class="col">Reason for Visit: {{form.visit}}</div>
+                        {% if request.user|has_group:"staff" %}
+                            <div class="col">Status: {{form.stat}}</div>
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="row" style="width: 50%; margin-left: 40%; margin-right: 40%">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button id="submit_button" type="submit" class="btn btn-primary">Set Appointment</button>
+                </div>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
 {%endblock%}
