--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/appointment.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/appointment.html
@@ -10,7 +10,7 @@
     data-bs-target="#appointment"
     style="color: black">
     <i class="fas fa-folder-plus fa-lg"></i> 
-    Set Appointment </button>
+    Schedule Appointment </button>
 </div>
 
 {% if count == 0 %}
