--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
   </head>
-<body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #1fbcff;">
+<body style="background-color:#f2f7fa">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #1fbcff">
         <div class="container-fluid">
           <div class = "topnav-left">
             <a class="navbar-brand" href="{% url 'dashboard' %}"><i class="fas fa-baby"></i></a>
