--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/register-patient.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/register-patient.html
@@ -53,7 +53,7 @@
     </div>
     {% endfor %} {% endif %}
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+      <a href="{% url 'search-patient'%}"><button type="button" class="btn btn-secondary">Cancel</button></a>
       <button id="submit_button" type="submit" class="btn btn-primary">Create Account</button>
     </div>
 </form>
