--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/display-vaccine.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/display-vaccine.html
@@ -22,7 +22,7 @@
                 <a href="#">
                 <button class="btn btn-success">
                     <i class="far fa-save"></i>
-                    Edit</button></a>
+                    Update</button></a>
             </div>
             
            
