--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/display-vaccine.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/display-vaccine.html
@@ -27,8 +27,8 @@
                         Update</button></a>
                 </div>
                 
-            
-                <table class="table table-striped table-hover table-bordered">
+                <br />
+                <table class="table  table-hover table-bordered">
                     <thead class="table table-info">
                         <tr>
                             <th scope="col">Age</th>
@@ -42,7 +42,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td scope="col" rowspan="2">Birth</td>
+                            <td scope="col" class="align-middle" rowspan="2">Birth</td>
                             <td scope="col">BCG</td>
                             <td scope="col">1 of 1</td>
                             <td scope="col">{{ vaccine.bcg_brand }}</td>
@@ -59,7 +59,7 @@
                             <td scope="col">{{ vaccine.hepb1_rem }}</td>
                         </tr>
                         <tr>
-                            <td scope="col" rowspan="6">2 to 3 months</td>
+                            <td scope="col"   class="align-middle"rowspan="6">2 to 3 months</td>
                             <td scope="col">Hepatitis B#2</td>
                             <td scope="col">2 of 3</td>
                             <td scope="col">{{ vaccine.hepb2_brand}}</td>
@@ -108,7 +108,7 @@
                             <td scope="col">{{ vaccine.rota1_rem}}</td>
                         </tr>
                         <tr>
-                            <td scope="col" rowspan="5">4 to 5 months</td>
+                            <td scope="col" class="align-middle" rowspan="5">4 to 5 months</td>
                             <td scope="col">DTaP/DTwP #2</td>
                             <td scope="col">2 of 5</td>
                             <td scope="col">{{ vaccine.dtap2_brand}}</td>
@@ -149,7 +149,7 @@
                             <td scope="col">{{ vaccine.rota2_rem}}</td>
                         </tr>
                         <tr>
-                            <td scope="col" rowspan="7">6 to 7 months</td>
+                            <td scope="col" class="align-middle" rowspan="7">6 to 7 months</td>
                             <td scope="col">Hepatitis B #3</td>
                             <td scope="col">3 of 3</td>
                             <td scope="col">{{ vaccine.hepb3_brand}}</td>
@@ -206,7 +206,7 @@
                             <td scope="col">{{ vaccine.inf1_rem}}</td>
                         </tr>
                         <tr>
-                            <td scope="col" rowspan="3">9 months</td>
+                            <td scope="col" class="align-middle" rowspan="3">9 months</td>
                             <td scope="col">Measles</td>
                             <td scope="col">1 of 1</td>
                             <td scope="col">{{ vaccine.msl_brand}}</td>
@@ -231,7 +231,7 @@
                             <td scope="col">{{ vaccine.inf2_rem}}</td>
                         </tr>
                         <tr>
-                            <td scope="col" rowspan="7">12 to 15 months</td>
+                            <td scope="col" class="align-middle" rowspan="7">12 to 15 months</td>
                             <td scope="col">MMR #1</td>
                             <td scope="col">1 of 2</td>
                             <td scope="col">{{ vaccine.mmr1_brand}}</td>
@@ -288,7 +288,7 @@
                             <td scope="col">{{ vaccine.hepa1_rem}}</td>
                         </tr>
                         <tr>
-                            <td scope="col">18 to 21 months</td>
+                            <td scope="col" class="align-middle">18 to 21 months</td>
                             <td scope="col">Inactivated Hepatitis A#2</td>
                             <td scope="col">2 of 2</td>
                             <td scope="col">{{ vaccine.hepa2_brand}}</td>
@@ -297,7 +297,7 @@
                             <td scope="col">{{ vaccine.hepa2_rem}}</td>
                         </tr>
                         <tr>
-                            <td scope="col" rowspan="3">24 months</td>
+                            <td scope="col" class="align-middle" rowspan="3">24 months</td>
                             <td scope="col">Meninggococcal vaccine</td>
                             <td scope="col">1 of 1</td>
                             <td scope="col">{{ vaccine.men_brand}}</td>
@@ -322,7 +322,7 @@
                             <td scope="col">{{ vaccine.japb2_rem}}</td>
                         </tr>
                         <tr>
-                            <td scope="col" rowspan="4">4 to 6 years</td>
+                            <td scope="col" class="align-middle" rowspan="4">4 to 6 years</td>
                             <td scope="col">DTaP/DTwP Booster #2</td>
                             <td scope="col">5 of 5</td>
                             <td scope="col">{{ vaccine.dtap5_brand}}</td>
@@ -355,7 +355,7 @@
                             <td scope="col">{{ vaccine.var2_rem}}</td>
                         </tr>
                         <tr>
-                            <td scope="col" >10 years</td>
+                            <td scope="col" class="align-middle" >10 years</td>
                             <td scope="col">Td/Tdap Booster #3</td>
                             <td scope="col">Every 10 years</td>
                             <td scope="col">{{ vaccine.td_brand}}</td>
@@ -364,7 +364,7 @@
                             <td scope="col">{{ vaccine.td_rem}}</td>
                         </tr>
                         <tr>
-                            <td scope="col" rowspan="2" >9 to 14 years</td>
+                            <td scope="col"class="align-middle"  rowspan="2" >9 to 14 years</td>
                             <td scope="col">HPV #1</td>
                             <td scope="col">1 of 2</td>
                             <td scope="col">{{ vaccine.hpv11_brand}}</td>
@@ -381,7 +381,7 @@
                             <td scope="col">{{ vaccine.hpv12_rem}}</td>
                         </tr>
                         <tr>
-                            <td scope="col" rowspan="3" >15 and up</td>
+                            <td scope="col"class="align-middle" rowspan="3" >15 and up</td>
                             <td scope="col">HPV #1</td>
                             <td scope="col">1 of 3</td>
                             <td scope="col">{{ vaccine.hpv21_brand}}</td>
