--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/appointment.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/appointment.html
@@ -2,34 +2,34 @@
 {% block content %} {% load static %} {% load auth_extras %}
 
 <div class="d-flex align-items-start">
-    <ul class="nav flex-column " style="background-color:#e3f2fd;;">
+  <ul class="nav flex-column " style="background-color:#e3f2fd;;">
+    {% if request.user|has_group:"staff"%}
+      <li class="profile">
+        <a class="nav-link active" href="#">Profile</a>
+      </li>
+      {% endif %}
+      {% if request.user|has_group:"patient"%}
+      <li class="profile">
+        <a class="nav-link active" href="{% url 'update-patient-profile' %}">Profile</a>
+      </li>
+      {% endif %}
+      <li class="appointment">
+        <a class="nav-link" href="{% url 'appointment' ">Appointment</a>
+      </li>
+      <li class="vaccine">
+        <a class="nav-link active" href="#">Vaccine</a>
+      </li>
+      <li class="certificate">
+        <a class="nav-link" href="#">Certificate</a>
+      </li>
       {% if request.user|has_group:"staff"%}
-        <li class="profile">
-          <a class="nav-link active" href="#">Profile</a>
-        </li>
-        {% endif %}
-        {% if request.user|has_group:"patient"%}
-        <li class="profile">
-          <a class="nav-link active" href="{% url 'update-patient-profile' %}">Profile</a>
-        </li>
-        {% endif %}
-        <li class="appointment">
-          <a class="nav-link" href="{% url 'appointment' %}">Appointment</a>
-        </li>
-        <li class="vaccine">
-          <a class="nav-link active" href="#">Vaccine</a>
-        </li>
-        <li class="certificate">
-          <a class="nav-link" href="#">Certificate</a>
-        </li>
-        {% if request.user|has_group:"staff"%}
-        <li class="portal">
-          <a class="nav-link" href="{% url 'portal' %}">Portal</a>
-        </li>
-        {% endif %}
-        
-    </ul>
-</div>
+      <li class="portal">
+        <a class="nav-link" href="#">Portal</a>
+      </li>
+      {% endif %}
+      
+  </ul>
+  </div>
 
 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
     <button
